# updesk

./: .gitignore  Cargo.toml  DISTRIBUTION.md  MOBILE-HOST-FEASIBILITY.md  QUICKSTART.md  README.md  SERVICE-MODE.md  SILENT-HOST-PLAN.md  UpDesk-Silent-Host-Architecture.docx  UpDesk-Technical-Explanation.docx  package-lock.json  package.json
apps/android-controller/: build.gradle.kts  settings.gradle.kts
apps/android-controller/app/: build.gradle.kts
apps/android-controller/app/src/main/: AndroidManifest.xml
apps/android-controller/app/src/main/java/com/nikhil/updeskcontroller/: Identity.kt  MainActivity.kt  SignalingClient.kt  WebRtcClient.kt
apps/android-controller/app/src/main/res/layout/: activity_main.xml
apps/android-controller/app/src/main/res/values/: strings.xml
apps/android-host/: KNOX-INTEGRATION.md  README.md  build.gradle.kts  settings.gradle.kts
apps/android-host/app/: build.gradle.kts
apps/android-host/app/src/main/: AndroidManifest.xml
apps/android-host/app/src/main/java/com/nikhil/updeskhost/: FileTransfer.kt  Identity.kt  InputAccessibilityService.kt  MainActivity.kt  NetworkInfo.kt  RootInput.kt  WebRtcClient.kt  (+2 more)
apps/android-host/app/src/main/res/layout/: activity_main.xml
apps/android-host/app/src/main/res/values/: strings.xml
apps/controller-app/: package-lock.json  package.json
apps/controller-app/src/: controller.js  fileTransfer.js  index.html  rtcConfig.js  signaling.js  styles.css
apps/controller-app/src-tauri/: Cargo.toml  tauri.conf.json
apps/controller-app/src-tauri/src/: lib.rs  main.rs
apps/host-agent/: package-lock.json  package.json
apps/host-agent/src/: host.js  index.html  overlay.html  rtcConfig.js  styles.css
apps/host-agent/src-tauri/: Cargo.toml  tauri.conf.json
apps/host-agent/src-tauri/capabilities/: overlay.json
apps/host-agent/src-tauri/src/: lib.rs  main.rs
crates/host-service/: Cargo.toml
crates/host-service/src/: main.rs
crates/native-host/: Cargo.toml  README.md
crates/native-host/src/: capture.rs  input.rs  main.rs  service.rs
crates/signaling-server/: Cargo.toml
crates/signaling-server/src/: main.rs
infra/: AWS-DEPLOY.md  aws-setup.sh  docker-compose.yml
infra/caddy/: Caddyfile
infra/coturn/: turnserver.conf
report/: Cover.docx  Report.docx  UpDesk-Project-Report.docx
report/latex/: README.md  main.tex
report/latex/chapters/: ch1_introduction.tex  ch2_literature_review.tex  ch3_requirements.tex  ch4_system_design.tex  ch5_implementation.tex  ch6_results.tex  ch7_conclusion.tex  references.tex
report/latex/frontmatter/: abbreviations.tex  abstract.tex  acknowledgement.tex  certificate.tex  declaration.tex  titlepage.tex
scripts/: admin.js  build-web-controller.sh  cert-pin.sh  genEnrollCode.js  serve-web.js  testClient.js
shared/: SignalingClient.js  identityKey.js
src/: authCrypto.js  authManager.js  deviceRegistry.js  keyStore.js  peerRegistry.js  server.js  sessionManager.js
