[package]
name = "native-host"
version = "0.1.0"
edition = "2021"
description = "UpDesk silent native host — headless screen capture + streaming (Phase 1: capture)"

[[bin]]
name = "native-host"
path = "src/main.rs"

[dependencies]
scrap = "0.5"
image = { version = "0.25", default-features = false, features = ["png"] }
openh264 = "0.6"
webrtc = "0.11"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"
serde_json = "1"
env_logger = "0.11"
log = "0.4"
enigo = "0.2"
