[package]
name = "signaling-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde_json = "1"
ed25519-dalek = "2"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
dotenvy = "0.15"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
rustls-pemfile = "2"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls-ring", "postgres"] }
